Update index.html and README for mustache version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Issues retriever</h2>
         <ul>
             <li><a href="/handlebars/issues-retriever/">Handlebars</a></li>
+            <li><a href="/mustache/issues-retriever/">Mustache.js</a></li>
         </ul>
 
     </body>
